# notes_examples

./: .gitignore  README.md
docs/aspnetcore/: AspNetCore 启用严格的编译检查.md  AspNetCore 多个项目的全局设置.md  EntityFramework Core 值转换与从属实体类型的值转换.md  部署在 Kubernetes 的 SignalR 微服务.md
docs/container/: .gitignore  README.md  docker.md  docker_compose.md  k3s_rancher.md  minikube.md  podman.md
docs/container/examples/kubernetes/: clickhouse_depl.yaml  ingress_nginx_test.yaml  minio_depl.yaml  nginx_depl.yaml  postgres_depl.yaml  quick-test.yaml
docs/development_environment/: 开发环境 Linux 篇.md  开发环境 MacOS 篇.md
docs/java/: 使用 Gradle 构建 Java 项目.md  使用 Maven 构建 Java 项目.md
docs/llm/: LLM 提示词.md  在 AMD 显卡上使用 PyTorch 实现 GPU 加速.md
docs/python/: Python 发布包到 PyPI.md  Python 模块代理.md  Python 项目集成 Git 预提交钩子.md
docs/typescript/: TypeScript 发布包到 Npm.md  TypeScript 项目集成 Git 预提交钩子.md
examples/src/csharp/csharp_captcha_robot/: CaptchaRobot_win.csproj  CaptchaRobot_win.sln  Form1.Designer.cs  Form1.cs  Form1.resx  LICENSE  Program.cs
examples/src/java/antlr4_examples/: settings.gradle
examples/src/python/: .gitignore
examples/src/python/langchain_example/: langchain_call_llm.py  langchain_tool.py  pyproject.toml  ruff.toml
templates/src/python/webapi_fastapi/: .gitignore  .gitlab-ci.yml  justfile  pyproject.toml  pyrightconfig.json
templates/src/python/webapi_fastapi/simple/: __main__.py  config.py  env.py  exception.py  serve.py
templates/src/python/webapi_fastapi/simple/apis/: __init__.py
templates/src/python/webapi_fastapi/simple/apis/v1/: __init__.py  parrot.py
(+85 files in other folders)
